--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "dev": "ts-node src/server.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
+    "@types/node-schedule": "^2.1.7",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "firebase": "^11.6.0",
     "jsrsasign": "^10.8.6",
-    "playwright": "^1.40.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-schedule": "^2.1.1",
+    "playwright": "^1.40.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
