--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@types/node-schedule": "^2.1.7",
     "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "jsrsasign": "^10.8.6",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.1",
