--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node src/server.ts"
+    "start": "node --max-old-space-size=4096 dist/server.js",
+    "dev": "ts-node  src/server.ts"
   },
   "dependencies": {
     "@types/node-schedule": "^2.1.7",
@@ -14,12 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "firebase": "^11.6.0",
+    "firebase": "^11.7.3",
     "firebase-admin": "^13.2.0",
     "jsrsasign": "^10.8.6",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.1",
-    "playwright": "^1.40.0"
+    "playwright": "^1.40.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
